// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`News item should render initially 1`] = `
<div
  className="news__item"
/>
`;

exports[`News item when loaded should match snapshot 1`] = `
<div
  className="news__item"
>
  <div
    className="news__item-content"
  >
    <article
      className="news__item-story"
    >
      <header
        className="news__item-headline"
      >
        test
      </header>
      <time
        className="news__item-date"
      >
        test
      </time>
      <div
        className="news__item-navbutton-container"
      >
        <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="right"
          prefixCls="ant-tooltip"
          title="News archive"
          transitionName="zoom-big-fast"
        >
          <Component
            className="news__item-navlink"
            to="/news"
          >
            <Button
              ghost={false}
              loading={false}
              prefixCls="ant-btn"
              shape="circle"
              type="primary"
            >
              <FontAwesomeIcon$1
                border={false}
                className=""
                fixedWidth={false}
                flip={null}
                icon={
                  Object {
                    "icon": Array [
                      576,
                      512,
                      Array [],
                      "f1ea",
                      "M552 64H112c-20.858 0-38.643 13.377-45.248 32H24c-13.255 0-24 10.745-24 24v272c0 30.928 25.072 56 56 56h496c13.255 0 24-10.745 24-24V88c0-13.255-10.745-24-24-24zM48 392V144h16v248c0 4.411-3.589 8-8 8s-8-3.589-8-8zm480 8H111.422c.374-2.614.578-5.283.578-8V112h416v288zM172 280h136c6.627 0 12-5.373 12-12v-96c0-6.627-5.373-12-12-12H172c-6.627 0-12 5.373-12 12v96c0 6.627 5.373 12 12 12zm28-80h80v40h-80v-40zm-40 140v-24c0-6.627 5.373-12 12-12h136c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H172c-6.627 0-12-5.373-12-12zm192 0v-24c0-6.627 5.373-12 12-12h104c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H364c-6.627 0-12-5.373-12-12zm0-144v-24c0-6.627 5.373-12 12-12h104c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H364c-6.627 0-12-5.373-12-12zm0 72v-24c0-6.627 5.373-12 12-12h104c6.627 0 12 5.373 12 12v24c0 6.627-5.373 12-12 12H364c-6.627 0-12-5.373-12-12z",
                    ],
                    "iconName": "newspaper",
                    "prefix": "far",
                  }
                }
                listItem={false}
                mask={null}
                name=""
                pull={null}
                pulse={false}
                rotation={null}
                size={null}
                spin={false}
                symbol={false}
                transform={null}
              />
            </Button>
          </Component>
        </Tooltip>
        <div
          className="news__item-share-buttons-title"
        >
          Share
        </div>
        <CreatedButton
          className="news__item-share-button"
          hashtags={
            Array [
              "#test",
            ]
          }
          title="test"
          url="http://localhost:3000/news/test"
          windowHeight={400}
          windowWidth={550}
        >
          <Icon
            className=""
            iconBgStyle={Object {}}
            logoFillColor="white"
            round={true}
            size={32}
          />
        </CreatedButton>
        <CreatedButton
          className="news__item-share-button"
          hashtag="#test"
          quote="test"
          url="http://localhost:3000/news/test"
          windowHeight={400}
          windowWidth={550}
        >
          <Icon
            className=""
            iconBgStyle={Object {}}
            logoFillColor="white"
            round={true}
            size={32}
          />
        </CreatedButton>
        <CreatedButton
          className="news__item-share-button"
          onClick={[Function]}
          openWindow={false}
          subject="test"
          url="http://localhost:3000/news/test"
        >
          <Icon
            className=""
            iconBgStyle={Object {}}
            logoFillColor="white"
            round={true}
            size={32}
          />
        </CreatedButton>
      </div>
      <section
        className="news__item-details"
        dangerouslySetInnerHTML={
          Object {
            "__html": undefined,
          }
        }
      />
    </article>
  </div>
</div>
`;

exports[`News item when loading should match snapshot 1`] = `
<div
  className="news__item"
>
  <Loading
    error={false}
    message="There was an error loading this component"
    pastDelay={true}
  />
</div>
`;

exports[`News item with error should match snapshot 1`] = `
<div
  className="news__item"
>
  <Loading
    error={true}
    message="There was an error retrieving this story"
    pastDelay={true}
  />
</div>
`;
